mdapioutput/unpackaged/objects/VehicleOwnership__c.object
<CustomObject>
    <fields>
        <fullName>Account_ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vehicle Ownerships</relationshipLabel>
        <relationshipName>Vehicle_Ownerships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Vehicle Ownerships</relationshipLabel>
        <relationshipName>Vehicle_Ownerships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>End Date of the Ownership</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Starting date of the Ownership</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VehicleOwnershipGlobalExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Vehicle Ownership Global External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vehicle_ref__c</fullName>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Vehicle Ownerships</relationshipLabel>
        <relationshipName>Vehicle_Ownerships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Vehicle Ownership</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_ref__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>Vehicle_ref__c</columns>
        <columns>VehicleOwnershipGlobalExternalId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VO{000000000}</displayFormat>
        <label>Vehicle Ownership Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Ownerships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>